--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@geist-ui/core": "^2.3.8",
-    "@sentry/browser": "^7.92.0",
+    "@sentry/browser": "^7.93.0",
     "@sentry/vite-plugin": "^2.10.2",
     "@tabler/icons-react": "^2.45.0",
     "construct-style-sheets-polyfill": "3.1.0",
@@ -74,7 +74,7 @@
     "ts-loader": "9.5.0",
     "tslib": "2.6.2",
     "typescript": "5.2.2",
-    "vite": "5.0.0",
+    "vite": "^5.0.11",
     "vitest": "^0.34.6",
     "ws": "8.14.2"
   },
